# jira-notion-syncron

./: .flake8  .gitignore  .pre-commit-config.yaml  ANASTASIIA_ADDED.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  HOWTO_UPDATE_JIRA.md  INSTALLATION_COMPLETE.md  INVITE_USERS_GUIDE.md  MIGRATION_COMPLETE.md  MIGRATION_PLAN.md  Makefile  NEXT_STEPS.md  NOTION_FULL_EXTRACTION_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  SETUP_TRANSCRIPTION.md  START_HERE.md  SUMMARY.md  TEST_RESULTS.md  coverage.xml  docker-compose.yml  mypy.ini  notion_sample.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: departments.yaml  env.template
data/users/: users_template.json
docs/adr/: 001-clean-architecture.md
scripts/: __init__.py  analyze_notion_structure.py  analyze_plans_reports.py  check_created_tasks.py  check_notion_fields_usage.py  check_updated_task.py  delete_all_tasks.py  diagnose_jira_issues.py  export_notion_full.py  export_task_for_manual_update.py  find_users_by_email.py  get_jira_boards.py  get_jira_users.py  get_project_key.py  match_users_by_name.py  migrate_notion_to_jira.py  migrate_notion_to_jira_full.py  test_jira_integration.py  transcribe_videos.py  update_all_jira_tasks.py  update_jira_from_notion.py  update_jira_simple.py  update_specific_task.py  validate_config.py
src/: __init__.py
src/application/use_cases/: __init__.py  create_task_in_jira.py
src/domain/models/: __init__.py  department.py  notion_block.py  sprint.py  task.py  user.py
src/domain/repositories/: __init__.py  task_repository.py
src/domain/services/: __init__.py
src/infrastructure/database/: __init__.py
src/infrastructure/jira/: __init__.py  jira_client.py  jira_repository.py
src/infrastructure/notion/: __init__.py  notion_client.py  notion_storage.py
src/infrastructure/parsers/: __init__.py
src/presentation/: __init__.py
src/presentation/cli/: main.py
tests/: conftest.py
tests/unit/: test_models.py
